<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.signup.SignUpFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_signup_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/signup_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/monserrat_medium"
            android:text="@string/text_signup_top_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_signup_top_text"
            app:layout_constraintBottom_toTopOf="@+id/image_photo_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_photo_select"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_text"
            app:srcCompat="@drawable/signup_photo_select" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_fullname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_photo_select">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_edt_line"
                android:fontFamily="@font/monserat_regular"
                android:hint="@string/text_signup_fullname"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textColor="@color/color_signup_text"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_fullname_label">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_edt_line"
                android:fontFamily="@font/monserat_regular"
                android:hint="@string/text_signup_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textColor="@color/color_signup_text"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email_label">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_edt_line"
                android:fontFamily="@font/monserat_regular"
                android:hint="@string/text_signup_password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColor="@color/color_signup_text"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_oval"
            android:fontFamily="@font/monserrat_medium"
            android:text="@string/text_signup_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password_label" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monserat_regular"
            android:text="@string/text_signup_zaten_hesabiniz_varmi"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_signup_link_text"
            app:layout_constraintEnd_toStartOf="@+id/tv_signup_link_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_signup_link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/monserat_regular"
            android:text="@string/text_signup_giris_yap"
            android:textColor="@color/color_sign_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_info_text"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>