<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.profile.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_followedListFragment"
            app:destination="@id/followedListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_dashboard_to_followerListFragment"
            app:destination="@id/followerListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.messages.MessagesFragment"
        android:label="@string/title_message"
        tools:layout="@layout/messages_fragment">
        <action
            android:id="@+id/action_navigation_messages_to_messageFollowedList"
            app:destination="@id/messageFollowedList"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_messages_to_messagesSendFragment"
            app:destination="@id/messagesSendFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_content"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.content.ContentAddFragment"
        android:label="@string/title_content_share"
        tools:layout="@layout/content_add_fragment" />
    <fragment
        android:id="@+id/followerListFragment"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.profile.followerlist.FollowerListFragment"
        android:label="follower_list_fragment"
        tools:layout="@layout/follower_list_fragment">
        <action
            android:id="@+id/action_followerListFragment_to_otherProfileFragment"
            app:destination="@id/otherProfileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/followedListFragment"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.profile.followedlist.FollowedListFragment"
        android:label="followed_list_fragment"
        tools:layout="@layout/followed_list_fragment">
        <action
            android:id="@+id/action_followedListFragment_to_otherProfileFragment"
            app:destination="@id/otherProfileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/otherProfileFragment"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.profile.otherprofile.OtherProfileFragment"
        android:label="otherprofile_fragment"
        tools:layout="@layout/otherprofile_fragment">
        <argument
            android:name="userid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.search.SearchFragment"
        android:label="search_fragment"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_navigation_search_to_otherProfileFragment"
            app:destination="@id/otherProfileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/messageFollowedList"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.messages.MessageFollowedList"
        android:label="message_followed_list_fragment"
        tools:layout="@layout/message_followed_list_fragment">
        <action
            android:id="@+id/action_messageFollowedList_to_messagesSendFragment"
            app:destination="@id/messagesSendFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/messagesSendFragment"
        android:name="com.ardakazanci.samplesocialmediaapp.ui.main.ui.messages.MessagesSendFragment"
        android:label="messages_send_fragment"
        tools:layout="@layout/messages_send_fragment">
        <argument
            android:name="current_user_id"
            app:argType="string" />
        <argument
            android:name="other_user_id"
            app:argType="string" />
    </fragment>
</navigation>